module laya{
export class LayaProcnetpack{
	public static S2C_MethonKeyGen= {
	704:protobuf.roots.laya.king.S2C_GetPVELevelId,
705:protobuf.roots.laya.king.C2S_ContinueFight,
706:protobuf.roots.laya.king.S2C_ContinueFight,
200:protobuf.roots.laya.king.C2S_GetInitGame,
201:protobuf.roots.laya.king.S2C_GetInitGame,
202:protobuf.roots.laya.king.C2S_AttackNpc,
203:protobuf.roots.laya.king.S2C_AttackNpc,
204:protobuf.roots.laya.king.C2S_AttackNpcReleaseSkill,
205:protobuf.roots.laya.king.S2C_AttackNpcReleaseSkill,
401:protobuf.roots.laya.king.C2S_BuyHero,
402:protobuf.roots.laya.king.S2C_BuyHero,
403:protobuf.roots.laya.king.C2S_EnQueue,
404:protobuf.roots.laya.king.S2C_EnQueue,
405:protobuf.roots.laya.king.C2S_SetDefArmy,
406:protobuf.roots.laya.king.S2C_SetDefArmy,
407:protobuf.roots.laya.king.C2S_EnQueueSingle,
408:protobuf.roots.laya.king.S2C_EnQueueSingle,
409:protobuf.roots.laya.king.C2S_HeroRecruit,
410:protobuf.roots.laya.king.S2C_HeroRecruit,
411:protobuf.roots.laya.king.C2S_FreeHeroRecruit,
412:protobuf.roots.laya.king.S2C_FreeHeroRecruit,
100:protobuf.roots.laya.king.C2S_Login,
101:protobuf.roots.laya.king.S2C_Login,
102:protobuf.roots.laya.king.S2C_ErrMsg,
103:protobuf.roots.laya.king.C2S_Ping,
104:protobuf.roots.laya.king.S2C_Ping,
105:protobuf.roots.laya.king.C2S_Heart,
106:protobuf.roots.laya.king.S2C_Heart,
107:protobuf.roots.laya.king.C2S_ReConnect,
300:protobuf.roots.laya.king.C2S_Sign,
301:protobuf.roots.laya.king.S2C_Sign,
302:protobuf.roots.laya.king.C2S_GetSignInfo,
303:protobuf.roots.laya.king.S2C_GetSignInfo,
304:protobuf.roots.laya.king.C2S_GetRedPoint,
305:protobuf.roots.laya.king.S2C_GetRedPoint,
306:protobuf.roots.laya.king.C2S_GetRankInfo,
307:protobuf.roots.laya.king.S2C_GetRankInfo,
108:protobuf.roots.laya.king.S2C_ReConnect,
701:protobuf.roots.laya.king.C2S_FightPVE,
702:protobuf.roots.laya.king.S2C_FightPVE,
703:protobuf.roots.laya.king.C2S_GetPVELevelId};
 public static C2S_MethonKeyGen = { "protobuf.roots.laya.king.S2C_GetPVELevelId":704,
"protobuf.roots.laya.king.C2S_ContinueFight":705,
"protobuf.roots.laya.king.S2C_ContinueFight":706,
"protobuf.roots.laya.king.C2S_GetInitGame":200,
"protobuf.roots.laya.king.S2C_GetInitGame":201,
"protobuf.roots.laya.king.C2S_AttackNpc":202,
"protobuf.roots.laya.king.S2C_AttackNpc":203,
"protobuf.roots.laya.king.C2S_AttackNpcReleaseSkill":204,
"protobuf.roots.laya.king.S2C_AttackNpcReleaseSkill":205,
"protobuf.roots.laya.king.C2S_BuyHero":401,
"protobuf.roots.laya.king.S2C_BuyHero":402,
"protobuf.roots.laya.king.C2S_EnQueue":403,
"protobuf.roots.laya.king.S2C_EnQueue":404,
"protobuf.roots.laya.king.C2S_SetDefArmy":405,
"protobuf.roots.laya.king.S2C_SetDefArmy":406,
"protobuf.roots.laya.king.C2S_EnQueueSingle":407,
"protobuf.roots.laya.king.S2C_EnQueueSingle":408,
"protobuf.roots.laya.king.C2S_HeroRecruit":409,
"protobuf.roots.laya.king.S2C_HeroRecruit":410,
"protobuf.roots.laya.king.C2S_FreeHeroRecruit":411,
"protobuf.roots.laya.king.S2C_FreeHeroRecruit":412,
"protobuf.roots.laya.king.C2S_Login":100,
"protobuf.roots.laya.king.S2C_Login":101,
"protobuf.roots.laya.king.S2C_ErrMsg":102,
"protobuf.roots.laya.king.C2S_Ping":103,
"protobuf.roots.laya.king.S2C_Ping":104,
"protobuf.roots.laya.king.C2S_Heart":105,
"protobuf.roots.laya.king.S2C_Heart":106,
"protobuf.roots.laya.king.C2S_ReConnect":107,
"protobuf.roots.laya.king.C2S_Sign":300,
"protobuf.roots.laya.king.S2C_Sign":301,
"protobuf.roots.laya.king.C2S_GetSignInfo":302,
"protobuf.roots.laya.king.S2C_GetSignInfo":303,
"protobuf.roots.laya.king.C2S_GetRedPoint":304,
"protobuf.roots.laya.king.S2C_GetRedPoint":305,
"protobuf.roots.laya.king.C2S_GetRankInfo":306,
"protobuf.roots.laya.king.S2C_GetRankInfo":307,
"protobuf.roots.laya.king.S2C_ReConnect":108,
"protobuf.roots.laya.king.C2S_FightPVE":701,
"protobuf.roots.laya.king.S2C_FightPVE":702,
"protobuf.roots.laya.king.C2S_GetPVELevelId":703};
}
}